--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build"
   ],
   "devDependencies": {
+    "@babel/parser": "^7.14.2",
+    "@babel/traverse": "^7.14.2",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@monaco-editor/react": "3.7.5",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
