react-beatiful-dnd for drag-drop frontend

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "dependencies": {
     "firebase": "^9.6.0",
     "firebase-admin": "^10.0.0",
-    "firebase-tools": "^9.23.0"
+    "firebase-tools": "^9.23.0",
+    "react-beautiful-dnd": "^13.1.0"
   }
 }
